src/containers/HomePageVideoContainer/HomePageVideoContainer.module.css
/* laptop */
@media (min-width: 601px) {
  .video {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25;
    height: 0;
  }

  iframe{
    margin-left: 20rem;
    width: 60%;
    height: 64.2%;
  }

  .root {
    height: 75vh;
  }
}

/******************************************************************/

/* mobile */
@media (max-width: 600px) {
  .video {
    width: 100vw;
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 30vh;
    margin-top: 5vh;
    height: 0;
  }

  iframe{
    width: 100%;
    height: 100%;
  }

  .root {
    height: 55vh;
    width: 100vw;
  }
}

/******************************************************************/

